--- a/Style.css
+++ b/Style.css
@@ -23,7 +23,7 @@ h1
 
 body 
 {
-  background-image: url("bground2.jpg");
+  background-image: url("http://imgur.com/OigZI8K");
   background-repeat: no-repeat;
   background-size: cover;
   
