--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1
 
 body 
 {
-  background-image: url("http://imgur.com/OigZI8K");
+  background-image: url(".../img/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   
