--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1
 body 
 {
   background-image: url(".../img/background.jpg");
-  background-repeat: repeat;
+  /*background-repeat: repeat;*/
   background-size: cover;
   
 }
