--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body
 {
   background-image: url(".../img/background.jpg");
   /*background-repeat: repeat;*/
-  background-size: cover;
+  background-size: contain;
   
 }
 
